# data-science

./: .gitignore  Classification.py  Decision_Tree.py  GradientBoost.py  KNN.py  MODEL_CARD_covertype.md  MODEL_CARD_parkinsons.md  README.md  RandomForest.py  XGBoost.py  data_balancing.py  naive_bayes.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/final/covertype/: feature_ranking_anova.csv  report_table_raw_vs_scaled.csv  report_table_raw_vs_scaled_feature_selection.csv
artifacts/final/parkinsons/: feature_ranking_anova.csv  report_table_raw_vs_scaled.csv  report_table_raw_vs_scaled_feature_selection.csv  report_table_raw_vs_scaled_pca.csv  stage_1_results.csv
configs/: covertype.yaml  parkinsons.yaml  sweeps.yaml
experiments/: xgb_pd_sweep.yaml
scripts/: analysis.py  preprocessing.py
src/cml_bench/: main.py
src/cml_bench/data/: datasets.py  sampling.py  split.py
src/cml_bench/evaluation/: plots.py  sweep_plots.py
src/cml_bench/experiments/: _context.py  _wandb.py  final.py  reproduce.py  stage_1.py  stage_2.py  sweeps.py
src/cml_bench/features/: preprocessing.py
src/cml_bench/models/: pipelines.py  registry.py
src/cml_bench/utils/: config.py
src/data_science/: datasets.py  main.py  pipeline.py  train.py
src/data_science/evaluation/: metrics.py
src/data_science/experiments/: _context.py  _wandb.py  final.py  reproduce.py  stage_1.py  stage_2.py  sweeps.py
src/data_science/models/: decision_tree.py  gradient_boost.py  knn.py  pipelines.py  random_forest.py  xgboost_clf.py
src/data_science/preprocessing/: data_balancing.py  data_cleaning.py  feature_selection.py  normalize.py
src/data_science/tasks/: arm.py  classify.py  clustering.py  experiment.py  preprocess.py
src/data_science/unsupervised/: arm.py  clustering.py
src/data_science/viz/: plots.py  print_statistics.py
tests/: conftest.py  test_configs.py  test_pipelines.py  test_report_artifacts.py  test_splits.py
