[project]
name = "data-science"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "ipython>=9.13.0",
    "matplotlib>=3.10.9",
    "mlxtend>=0.24.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
    "yellowbrick>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_science"]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[project.scripts]
data-science = "data_science.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/data_science/viz/print_statistics.py" = ["E501"]  # alignment-sensitive matrix printing
"src/data_science/preprocessing/data_cleaning.py" = ["E501"]  # exploratory script with tab indentation
"src/data_science/pipeline.py" = ["E501"]  # aligned classifier-config tables
